--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -33,7 +33,7 @@
       "type": "series",
       "name": "Blue Box",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx170942-B77wUSM1jQTu.jpg",
-      "description": "Genres: Romance, Slice of Life, Sports\nTags:School Club/Badminton/Athletics/Heterosexual/Coming of Age/Male Protagonist/School/Primarily Teen Cast/Basketball/Female Protagonist/Shounen/CGI\n<i>Do these sports-crossed lovers have a chance?</i>\n<br><br>\nTaiki Inomata loves badminton, but he has a long way to go before he can reach nationals. When Taiki sees upperclassman Chinatsu Kano practicing her heart out on the girls’ basketball team, he falls for her hard. After an unexpected turn of events brings the two closer together, sports might not be the first thing on their minds anymore!<br><br>(Source: TMS Anime)<br><br>\n<i>Note: The series is streaming a week in advance on Netflix Japan starting with episode 2 released alongside episode 1.</i>"
+      "description": "Genres: Romance, Slice of Life, Sports\nTags:School Club/Badminton/Athletics/Heterosexual/Coming of Age/Male Protagonist/School/Primarily Teen Cast/Basketball/Female Protagonist/Shounen/CGI/Tomboy\n<i>Do these sports-crossed lovers have a chance?</i>\n<br><br>\nTaiki Inomata loves badminton, but he has a long way to go before he can reach nationals. When Taiki sees upperclassman Chinatsu Kano practicing her heart out on the girls’ basketball team, he falls for her hard. After an unexpected turn of events brings the two closer together, sports might not be the first thing on their minds anymore!<br><br>(Source: TMS Anime)<br><br>\n<i>Note: The series is streaming a week in advance on Netflix Japan starting with episode 2 released alongside episode 1.</i>"
     },
     {
       "id": "tt0434665",
@@ -47,7 +47,7 @@
       "type": "series",
       "name": "Shangri-La Frontier Season 2",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176508-NHYHx5YJcU5i.png",
-      "description": "Genres: Action, Adventure, Comedy, Fantasy, Sci-Fi\nTags:Video Games/Virtual World/Hikikomori/Swordplay/Anthropomorphism/Magic/Male Protagonist/Shounen/Travel/Martial Arts\nThe second season of <i>Shangri-La Frontier</i>.<br><br>\n\nRakuro Hizutome only cares about one thing: beating crappy VR games. He devotes his entire life to these buggy games and could clear them all in his sleep. One day, he decides to challenge himself and play a popular god-tier game called Shangri-La Frontier. But he quickly learns just how difficult it is. Will his expert skills be enough to uncover its hidden secrets?<br><br>\n\n(Source: Crunchyroll)"
+      "description": "Genres: Action, Adventure, Comedy, Fantasy, Sci-Fi\nTags:Video Games/Virtual World/Hikikomori/Swordplay/Magic/Male Protagonist/Shounen/Anthropomorphism/Martial Arts/Travel\nThe second season of <i>Shangri-La Frontier</i>.<br><br>\n\nRakuro Hizutome only cares about one thing: beating crappy VR games. He devotes his entire life to these buggy games and could clear them all in his sleep. One day, he decides to challenge himself and play a popular god-tier game called Shangri-La Frontier. But he quickly learns just how difficult it is. Will his expert skills be enough to uncover its hidden secrets?<br><br>\n\n(Source: Crunchyroll)"
     },
     {
       "id": "tt4728568",
@@ -131,7 +131,7 @@
       "type": "series",
       "name": "Demon Lord 2099",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx163135-NjvXyXvTYSHH.jpg",
-      "description": "Genres: Action, Comedy, Drama, Fantasy, Sci-Fi\nTags:Cyberpunk/Male Protagonist/Demons/Primarily Adult Cast/Magic/VTuber\nThe cyberpunk metropolis Shinjuku—a massive city-state bedecked with neon signs, towering skyscrapers, and the latest cutting-edge technology. It is here, in year 2099 of the Fused Era, where the legendary Demon Lord Veltol has his second coming five centuries in the making. But this landscape is nothing like the one he conquered all those years ago, for the fusion of magic and engineering has elevated civilization to dazzling, unprecedented heights. Veltol may have been reduced to a historical footnote, but make no mistake…this brave new world will be his for the taking!\n<br><br>\n(Source: Yen Press)"
+      "description": "Genres: Action, Comedy, Drama, Fantasy, Sci-Fi\nTags:Cyberpunk/Dystopian/Male Protagonist/Demons/Primarily Adult Cast/Urban/Magic/Artificial Intelligence/VTuber\nThe cyberpunk metropolis Shinjuku—a massive city-state bedecked with neon signs, towering skyscrapers, and the latest cutting-edge technology. It is here, in year 2099 of the Fused Era, where the legendary Demon Lord Veltol has his second coming five centuries in the making. But this landscape is nothing like the one he conquered all those years ago, for the fusion of magic and engineering has elevated civilization to dazzling, unprecedented heights. Veltol may have been reduced to a historical footnote, but make no mistake…this brave new world will be his for the taking!\n<br><br>\n(Source: Yen Press)"
     },
     {
       "id": "tt27497575",
@@ -159,7 +159,7 @@
       "type": "series",
       "name": "I’ll Become a Villainess Who Goes Down in History",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx168139-nGLXIdSksKCI.jpg",
-      "description": "Genres: Comedy, Fantasy, Romance\nTags:Villainess/Female Protagonist/Royal Affairs/Josei/Isekai/Magic/Swordplay/Ojou-sama/Politics/School\nMe, the same girl who hates all those prim and proper heroines, got reincarnated as the villain in the world of my favorite fantasy dating sim! It’s my dream come true, so I’m going to leave my mark on history by becoming the world’s greatest villain! But to do that, I’ll need to get a lot stronger, and smarter. Just one problem—the harder I try to be evil, the harder the prince falls for me! At this rate, will I ever get to earn my place in history!?\n<br><br>\n(Source: Yen Press)\n\n<i>Note: The first episode was exclusively shown as a world premiere during the Anime Messe Babelsberg 2024 on July 20th 2024 as a part of a special Anime Panel.</i>"
+      "description": "Genres: Comedy, Fantasy, Romance\nTags:Villainess/Female Protagonist/Royal Affairs/Josei/Isekai/Magic/Swordplay/Ojou-sama/Politics/School/Class Struggle\nMe, the same girl who hates all those prim and proper heroines, got reincarnated as the villain in the world of my favorite fantasy dating sim! It’s my dream come true, so I’m going to leave my mark on history by becoming the world’s greatest villain! But to do that, I’ll need to get a lot stronger, and smarter. Just one problem—the harder I try to be evil, the harder the prince falls for me! At this rate, will I ever get to earn my place in history!?\n<br><br>\n(Source: Yen Press)\n\n<i>Note: The first episode was exclusively shown as a world premiere during the Anime Messe Babelsberg 2024 on July 20th 2024 as a part of a special Anime Panel.</i>"
     },
     {
       "id": "tt32510166",
@@ -173,7 +173,7 @@
       "type": "series",
       "name": "Tying the Knot with an Amagami Sister",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx164172-GY2aqItIuqtR.jpg",
-      "description": "Genres: Comedy, Drama, Ecchi, Romance\nTags:Heterosexual/Shrine Maiden/Female Harem/Male Protagonist/Shounen/Found Family\nUryuu Kamihate is a high school student striving to enter Kyoto University’s medical school. After being raised at an orphanage, Uryuu is taken in by the chief priest at Amagami Shrine, where he begins to live as a freeloader—and to cohabit with Yae, Yuna, and Asahi, the three beautiful shrine maiden sisters! What’s more, the condition he must meet in order to live at the shrine for free is to marry into the family and inherit the shrine! How will Uryuu overcome his marriage meetings with the three sisters as well as the many challenges that Amagami Shrine faces? So begins a miraculous rom-com about living under the same roof with three shrine maidens!<br>\n<br>\n(Source: Crunchyroll, edited)"
+      "description": "Genres: Comedy, Drama, Ecchi, Romance\nTags:Heterosexual/Shrine Maiden/Female Harem/Male Protagonist/Shounen/Found Family/Slapstick\nUryuu Kamihate is a high school student striving to enter Kyoto University’s medical school. After being raised at an orphanage, Uryuu is taken in by the chief priest at Amagami Shrine, where he begins to live as a freeloader—and to cohabit with Yae, Yuna, and Asahi, the three beautiful shrine maiden sisters! What’s more, the condition he must meet in order to live at the shrine for free is to marry into the family and inherit the shrine! How will Uryuu overcome his marriage meetings with the three sisters as well as the many challenges that Amagami Shrine faces? So begins a miraculous rom-com about living under the same roof with three shrine maidens!<br>\n<br>\n(Source: Crunchyroll, edited)"
     },
     {
       "id": "tt33992229",
@@ -257,7 +257,7 @@
       "type": "series",
       "name": "How I Attended an All-Guy's Mixer",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx169931-tPgDEKaHNkFr.jpg",
-      "description": "Genres: Comedy, Romance\nTags:Crossdressing/Tomboy/Primarily Adult Cast/College/Heterosexual/Shoujo/Ensemble Cast/Bar/Work/Chibi/Bisexual/Restaurant/Boys' Love\nCollege student Tokiwa gets invited to a mixer by his female classmate Suo. But when he arrives with his friends, they're greeted by three dazzlingly handsome men?! But as the two groups get to know each other, they find themselves getting closer in unexpected ways.<br><br>\n(Source: MANGA UP!)<br><br>\n<i>Note: Each episode streamed 1 week early on ABEMA. The original TV broadcast started on October 4th 2024.</i>"
+      "description": "Genres: Comedy, Romance\nTags:Crossdressing/Tomboy/Primarily Adult Cast/College/Heterosexual/Shoujo/Ensemble Cast/Chibi/Bar/Work/Restaurant/Bisexual/Boys' Love\nCollege student Tokiwa gets invited to a mixer by his female classmate Suo. But when he arrives with his friends, they're greeted by three dazzlingly handsome men?! But as the two groups get to know each other, they find themselves getting closer in unexpected ways.<br><br>\n(Source: MANGA UP!)<br><br>\n<i>Note: Each episode streamed 1 week early on ABEMA. The original TV broadcast started on October 4th 2024.</i>"
     },
     {
       "id": "tt30476504",
@@ -299,7 +299,7 @@
       "type": "series",
       "name": "A Terrified Teacher at Ghoul School!",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx171545-j9foxkHeXec7.jpg",
-      "description": "Genres: Comedy, Supernatural\nTags:Monster Boy/Primarily Male Cast/Cute Boys Doing Cute Things/Slapstick/Episodic/Teacher/Youkai/School/Male Protagonist/Urban Fantasy/Shounen/Primarily Teen Cast/Nekomimi/Gods\nRookie teacher Haruaki Abe is as cowardly as they come. It's hard enough for him to handle human students without whimpering-and now he's going to be teaching at a school full of monsters?! It's a classroom of horrors for Haruaki, as his mischievous students use every means at their disposal to prank him! Will this poor teacher be able to get his group of ghouls under control, or is this class destined for failure?<br>\n<br>\n(Source: Yen Press)"
+      "description": "Genres: Comedy, Supernatural\nTags:Youkai/School/Teacher/Monster Boy/Primarily Male Cast/Cute Boys Doing Cute Things/Slapstick/Episodic/Urban Fantasy/Male Protagonist/Shounen/Primarily Teen Cast/Nekomimi/Gods\nRookie teacher Haruaki Abe is as cowardly as they come. It's hard enough for him to handle human students without whimpering-and now he's going to be teaching at a school full of monsters?! It's a classroom of horrors for Haruaki, as his mischievous students use every means at their disposal to prank him! Will this poor teacher be able to get his group of ghouls under control, or is this class destined for failure?<br>\n<br>\n(Source: Yen Press)"
     },
     {
       "id": "tt32863895",
