--- a/catalog/movie/latest_anime_seasons.json
+++ b/catalog/movie/latest_anime_seasons.json
@@ -61,14 +61,14 @@
       "description": "Genres: Music\nTags:Idol/Ensemble Cast\nThe third movie in the UtaPri franchise, spotlighting the idol group QUARTET NIGHT."
     },
     {
-      "id": "tt30442574",
+      "id": "tt1045574",
       "type": "movie",
-      "name": "Tabekko Doubutsu THE MOVIE",
+      "name": "Dream Animals THE MOVIE",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/medium/b180124-kLrE636DrdKx.png",
       "behaviorHints": {
-        "defaultVideoId": "tt30442574"
+        "defaultVideoId": "tt1045574"
       },
-      "description": "Genres: Slice of Life\nTags:\nMovie based on the Tabekko Doubutsu brand of animal-shaped butter biscuits."
+      "description": "Genres: Slice of Life\nTags:\n\nDream Animals biscuits, a long-selling snack beloved by Japanese since its launch in 1978 has been sold in more than 20 countries around the world and features the animal names written in English on the biscuits. The product has enjoyed an explosion in popularity in recent years as merchandise, especially among young people. Now for the first time, the product is given treatment as an animated movie called Dream Animals: The Movie. How will these animal biscuit characters behave and sound as they embark upon a thrilling adventure while tugging at your heartstrings with endearingly rich personalities.\n<br><br>\n(Source: TBS)"
     }
   ]
 }
