--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -22,7 +22,7 @@
       "description": "Genres: Action, Sci-Fi\nTags:Cyberpunk/Parkour/Urban/Medicine/Male Protagonist/Prison\nThe year is 2052 — an era of unprecedented peace and prosperity prevails across the globe. The reason for this: mankind has been freed from sickness and pain. Nobel Prize winning neuroscientist Dr. Skinner has developed a miracle cure-all drug with no apparent drawbacks called Hapuna. Hapuna soon becomes ubiquitous… and essential. However, soon after Hapuna is officially introduced, Dr. Skinner vanishes.\n<br><br>\nThree years later, the world has moved on. But Dr. Skinner has returned — this time, as a harbinger of doom. Skinner announces that Hapuna has a short half-life. Everyone who has taken it will die approximately three years later. Death is coming for this sinful world — and coming soon.\n<br><br>\nAs a response to this threat, a special task force of 5 agents is gathered from across the world to save humanity from Skinner’s plan. This group is called “Lazarus.” Can they find Skinner and develop a vaccine before time runs out?\n<br><br>\n<i>(Source: Adult Swim)</i>"
     },
     {
-      "id": "tt33498499",
+      "id": "kitsu:45717",
       "type": "series",
       "name": "Slime Taoshite 300-nen, Shiranai Uchi ni Level MAX ni Nattemashita: Sono ni",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx143337-E4iVjwax3pYc.jpg",
@@ -127,18 +127,18 @@
       "description": "Genres: Action, Comedy, Fantasy, Mystery, Supernatural\nTags:Butler/Shounen/Male Protagonist\nSequel to <i>Kuroshitsuji: Kishuku Gakkou-hen.</i>"
     },
     {
-      "id": "tt30844357",
-      "type": "series",
-      "name": "Shoushimin Series 2nd Season",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181182-lnlfAByYD7X6.png",
-      "description": "Genres: Mystery, Slice of Life\nTags:Detective\nThe second season of <i>Shoushimin Series.</i><br><br>\nThe second season will focus on two new cases from the novel series, adapting the two-part third volume Shuuki Gentei Kuri Kinton Jiken (The Autumn-Exclusive Kuri Kinton Case) and the fifth volume Touki Gentei Bonbon Chocolat Jiken (The Winter-Exclusive Chocolate Bonbons Case).<br><br>\n(Source: MyAnimeList)"
-    },
-    {
       "id": "tt34880941",
       "type": "series",
       "name": "Mobile Suit Gundam GQuuuuuuX",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185213-lRRgmMYJfjJ9.jpg",
       "description": "Genres: Drama, Mecha, Sci-Fi\nTags:Female Protagonist/Robots/Space/Real Robot/Super Robot/Fugitive\nAmate Yuzuriha is a high-school student living peacefully in a space colony floating in outer space.<br><br>\nWhen she meets a war refugee named Nyaan, Amate is drawn into the illegal mobile suit dueling sport known as Clan Battle.<br><br>\nUnder the entry name \"Machu,\" she throws herself into fierce battle day after day, piloting the GQuuuuuuX. Then an unidentified Gundam mobile suit pursued by both the space force and the police appears before her, along with its pilot, a boy named Shuji.<br><br>\nNow their world is about to enter a new era.<br><br>\n(Source: Official Site)<br><br>\n<i>Note: Prior to broadcasting, \"Mobile Suit Gundam GQuuuuuuX -Beginning-\" — a theatrical pre-screening of the first 3 episodes edited together— debuted in Japan on January 17, 2025 and in North America on February 28, 2025.</i>"
+    },
+    {
+      "id": "tt30844357",
+      "type": "series",
+      "name": "Shoushimin Series 2nd Season",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx181182-lnlfAByYD7X6.png",
+      "description": "Genres: Mystery, Slice of Life\nTags:Detective\nThe second season of <i>Shoushimin Series.</i><br><br>\nThe second season will focus on two new cases from the novel series, adapting the two-part third volume Shuuki Gentei Kuri Kinton Jiken (The Autumn-Exclusive Kuri Kinton Case) and the fifth volume Touki Gentei Bonbon Chocolat Jiken (The Winter-Exclusive Chocolate Bonbons Case).<br><br>\n(Source: MyAnimeList)"
     },
     {
       "id": "tt16741414",
@@ -190,18 +190,18 @@
       "description": "Genres: Adventure, Drama, Fantasy\nTags:Female Protagonist/Primarily Female Cast/Magic/Witch/Curses\nOn her seventeenth birthday, the apprentice witch Meg learns that she only has one year left to live. Her teacher, the long-lived witch Faust, explains that the only way to undo the death curse is to collect tears of joy and grow the seed of life. To find them, Meg will have to leave the sheltered life she's always known and head out into the world. There will be meetings, partings, and friendships aplenty, and of course many tears. Meg will learn that the most important lessons for a witch are bright, sweet, and somewhat heart-wrenching.<br>\n<br>\n(Source: Yen Press) "
     },
     {
-      "id": "tt35437675",
-      "type": "series",
-      "name": "Uma Musume: Cinderella Gray",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180516-lebpoKLkw6E3.jpg",
-      "description": "Genres: Drama, Sports\nTags:Athletics/Primarily Female Cast/Female Protagonist/Kemonomimi/Seinen/Historical\n<i>Umamusume: Cinderella Gray</i> tells the tale of a lone girl in the destitute countryside of Kasamatsu who will soon rock Japan with her feet. This Cinderella story of youthful drama and running begins at a humble starting gate!"
-    },
-    {
       "id": "tt35436997",
       "type": "series",
       "name": "mono",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx176246-ndH8bKh7cmzf.jpg",
       "description": "Genres: Comedy, Slice of Life\nTags:School Club/Photography/Cute Girls Doing Cute Things/Female Protagonist\nThe <i>mono</i> manga is centered around high school girls who belong to the Cinephoto Club, which is a combination photography club and video research club set around Kofu City, Yamanashi Prefecture. The girls go about their daily lives using cameras tied to kites, action cameras and even drones around the city and prefecture. <br><br> (Source: Crunchyroll News, edited)"
+    },
+    {
+      "id": "tt35437675",
+      "type": "series",
+      "name": "Uma Musume: Cinderella Gray",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx180516-lebpoKLkw6E3.jpg",
+      "description": "Genres: Drama, Sports\nTags:Athletics/Primarily Female Cast/Female Protagonist/Kemonomimi/Seinen/Historical\n<i>Umamusume: Cinderella Gray</i> tells the tale of a lone girl in the destitute countryside of Kasamatsu who will soon rock Japan with her feet. This Cinderella story of youthful drama and running begins at a humble starting gate!"
     },
     {
       "id": "tt35636155",
