--- a/catalog/series/latest_anime_seasons.json
+++ b/catalog/series/latest_anime_seasons.json
@@ -32,7 +32,7 @@
       "id": "tt13248062",
       "type": "series",
       "name": "I've Been Killing Slimes For 300 Years And Maxed Out My Level Season 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx143337-E4iVjwax3pYc.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx143337-2uPE0ywVcz9X.jpg",
       "description": "Genres: Comedy, Fantasy, Slice of Life\nTags:Cute Girls Doing Cute Things/Female Protagonist/Isekai/Primarily Female Cast/Witch/Iyashikei/Dragons\nThe second season of <i>Slime Taoshite 300-nen, Shiranai Uchi ni Level Max ni Nattemashita</i>.<br><br>\nGet ready for more relaxing tales! Azusa Aizawa is a powerful witch who finally reached level 99 and now busies herself with laid-back quests instead. Her family continues to grow as some familiar faces are joined by bright-eyed newcomers. From trips to the beach to a martial arts tournament, you’re invited on Azusa’s carefree and heartwarming adventures of leisure.<br><br>\n(Source: Crunchyroll)\n"
     },
     {
@@ -50,18 +50,18 @@
       "description": "Genres: Action, Adventure, Drama, Fantasy\nTags:Urban/Super Power/Crime/Superhero/Fugitive/Male Protagonist/Shounen\nIn the world of My Hero Academia, not everyone needs a license to fight for justice!\n<br><br>\nIn a superpowered society, there is nothing ordinary about evil anymore. Heroes, trained and licensed to protect and defend the public against supervillains, stand above all the rest. Not everyone can be a hero, however, and there are those who would use their powers to serve the people without legal sanction. But do they fight for justice in the shadows, or for reasons known only to themselves? Whatever they fight for, they are called…vigilantes.\n<br><br>\nKoichi Haimawari couldn’t make the cut to become an official hero, so he uses his modest Quirk to do good deeds in his spare time. Then one day a fateful encounter with some local thugs leads him to team up with two other unlikely heroes. None of them really know what they’re doing, but they’ve got the courage—or foolishness—to try. But they soon discover fighting evil takes more than just being brave…\n<br><br>\n(Source: Viz Media) "
     },
     {
-      "id": "tt16341212",
-      "type": "series",
-      "name": "Aharen-san wa Hakarenai Season 2",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179979-OiIKSkhJRmvo.jpg",
-      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Kuudere/Shounen/School/Surreal Comedy/Slapstick/Male Protagonist/Female Protagonist/Primarily Teen Cast/Episodic/Heterosexual\nThe second season of <i>Aharen-san wa Hakarenai</i>."
-    },
-    {
       "id": "tt35436364",
       "type": "series",
       "name": "Please Put Them On, Takamine-san",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179965-fkPzvBjP4paF.jpg",
       "description": "Genres: Comedy, Ecchi, Romance, Slice of Life\nTags:Nudity/Femdom/Large Breasts/Heterosexual/Tsundere/Bullying/Slavery/Female Protagonist/School/Male Protagonist/Shounen\nTakane Takamine is the goddess of her high school. With perfect grades, athletic prowess, and unrivaled beauty, this student council president is the apple of everyone's eye-including Koushi Shirota, a below-average student with no friends or social prospects whatsoever. But he'll soon find out the secret behind Takamine's unbelievable success-her underwear! When she strips, she can undo any of her past actions, and now that Koushi knows, Takamine won't let him off so easy...<br><br>\n\n(Source: Yen Press)"
+    },
+    {
+      "id": "tt16341212",
+      "type": "series",
+      "name": "Aharen-san wa Hakarenai Season 2",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179979-OiIKSkhJRmvo.jpg",
+      "description": "Genres: Comedy, Romance, Slice of Life\nTags:Kuudere/Shounen/School/Surreal Comedy/Slapstick/Male Protagonist/Female Protagonist/Primarily Teen Cast/Episodic/Heterosexual\nThe second season of <i>Aharen-san wa Hakarenai</i>."
     },
     {
       "id": "tt33165027",
@@ -74,7 +74,7 @@
       "id": "tt28082379",
       "type": "series",
       "name": "Sentai Daishikkaku 2nd Season",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178781-cd3h8xeQJPPU.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178781-pbk5FgfiAJxS.jpg",
       "description": "Genres: Action, Comedy, Drama, Sci-Fi\nTags:Shounen/Urban Fantasy/Henshin/Monster Boy/Tokusatsu/Anti-Hero/Revenge/Shapeshifting/Aliens/Acting/Urban/School/Time Loop/Espionage/Delinquents\nThe second season of <i>Sentai Daishikkaku</i>."
     },
     {
@@ -95,8 +95,8 @@
       "id": "tt35346717",
       "type": "series",
       "name": "From Old Country Bumpkin to Master Swordsman",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179955-OPfWwE79zOz7.jpg",
-      "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Male Protagonist/Swordplay/Female Harem\nBeryl Gardinant, a self-proclaimed “humble old man,” is a sword instructor at his dojo in a rural, backwater village. In his younger years, he dreamed of glory as a master swordsman, but those days are long behind him. Out of the blue, he receives a visit from a famous former pupil who brings him world-shattering news—he's been appointed as special instructor for the knights of the Liberion Order! With his life now turned upside down, Beryl travels to the capital and reunites with some of his former students: elite knights, an ace wizard, and even an adventurer who's attained the highest guild rank possible. But why do they all want his tutelage?! As far as he's concerned, they clearly don't need him anymore.\n<br><br>\nCan Beryl live up to his new position? And will he ever get a moment's peace away from his adoring students?!\n<br><br>\n(Source: J-Novel Club)"
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx179955-e4UPTow92B1O.jpg",
+      "description": "Genres: Action, Adventure, Comedy, Fantasy\nTags:Female Harem/Male Protagonist/Swordplay\nBeryl Gardinant, a self-proclaimed “humble old man,” is a sword instructor at his dojo in a rural, backwater village. In his younger years, he dreamed of glory as a master swordsman, but those days are long behind him. Out of the blue, he receives a visit from a famous former pupil who brings him world-shattering news—he's been appointed as special instructor for the knights of the Liberion Order! With his life now turned upside down, Beryl travels to the capital and reunites with some of his former students: elite knights, an ace wizard, and even an adventurer who's attained the highest guild rank possible. But why do they all want his tutelage?! As far as he's concerned, they clearly don't need him anymore.\n<br><br>\nCan Beryl live up to his new position? And will he ever get a moment's peace away from his adoring students?!\n<br><br>\n(Source: J-Novel Club)"
     },
     {
       "id": "tt32524709",
@@ -253,18 +253,18 @@
       "description": "Genres: Comedy, Ecchi, Mecha, Romance, Sci-Fi\nTags:Seinen/Robots/Female Protagonist/Male Protagonist/Heterosexual\nThis risque romantic comedy story centers on Eita, an introvert mecha otaku high schooler who has a crush on the school's most popular girl Makina. When Eita finds Makina at her doorstep, he is flustered, and even more so when Makina reveals her secret: that she is a \"sexaroid\" robot designed for pleasure, and she is asking Eita to conduct some repairs on her discreetly. While Makina immediately tries to make a move on Eita physically, Eita struggles to contain himself, while also hiding her secret. <br><br>\n\n(Source: Anime News Network, edited)"
     },
     {
-      "id": "tt34818628",
-      "type": "series",
-      "name": "Nazotoki wa Dinner no Ato de",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184989-9i29Wrdrak11.png",
-      "description": "Genres: Comedy, Drama, Mystery\nTags:Detective/Female Protagonist/Butler\nReiko is a rich heiress to a zaibatsu, but she chose to work as a detective. She resents her superior, Kazamatsuri, who always seem to be making illogical deductions that causes murder cases to become cold cases. One day, her butler suddenly announces his retirement, and he chooses Kageyama as his replacement. Reiko realizes that Kageyama's deduction skills are very good after Kageyama solved a seemingly unsolvable mystery.<br><br>\nAfter that, whenever Reiko meets an unsolvable case, she would lay out the details of the case for Kageyama, and he would explain to her how that particular case is solved after dinner. After every case, Kageyama also explains to Reiko some universal truth or human nature that led to each crime being committed.<br><br>\n(Source: Wikipedia)"
-    },
-    {
       "id": "tt35437319",
       "type": "series",
       "name": "The Too-Perfect Saint: Tossed Aside by My Fiancé and Sold to Another Kingdom",
       "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx183275-WtAo77sYDFW8.png",
       "description": "Genres: Fantasy, Romance\nTags:Shoujo/Female Protagonist/Heterosexual\nPhilia’s family has produced saints for generations. It’s no surprise that she’s known as the greatest saint of all time—and set to marry the second prince, Julius. What no one expects is for Julius to call off the engagement, claiming that Philia’s perfection makes her charmless and unlikable. To add insult to injury, Philia is packed off to a neighboring country in exchange for gold and resources, forcing her to leave her homeland! Despite bracing herself for mistreatment, Philia finds a warm welcome in her new town, where she puts her saintly abilities to good use erecting barriers against monsters and curing epidemics. But even as she flourishes in her new life, her homeland is under threat of destruction!\n<br><br>\n(Source: Seven Seas Entertainment)"
+    },
+    {
+      "id": "tt34818628",
+      "type": "series",
+      "name": "Nazotoki wa Dinner no Ato de",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx184989-9i29Wrdrak11.png",
+      "description": "Genres: Comedy, Drama, Mystery\nTags:Detective/Female Protagonist/Butler\nReiko is a rich heiress to a zaibatsu, but she chose to work as a detective. She resents her superior, Kazamatsuri, who always seem to be making illogical deductions that causes murder cases to become cold cases. One day, her butler suddenly announces his retirement, and he chooses Kageyama as his replacement. Reiko realizes that Kageyama's deduction skills are very good after Kageyama solved a seemingly unsolvable mystery.<br><br>\nAfter that, whenever Reiko meets an unsolvable case, she would lay out the details of the case for Kageyama, and he would explain to her how that particular case is solved after dinner. After every case, Kageyama also explains to Reiko some universal truth or human nature that led to each crime being committed.<br><br>\n(Source: Wikipedia)"
     },
     {
       "id": "tt33021990",
@@ -309,13 +309,6 @@
       "description": "Genres: Adventure, Sci-Fi\nTags:Robots/Environmental/Female Protagonist/Coming of Age/Dystopian\n<i>Confrontation and Harmony between Humans and Nature.</i>\n<br><br>\nIn the distant future, humans create a robot named MIRU capable of traveling through time, visiting various eras, places, and even parallel worlds.\n<br><br>\nUnlike some robots, MIRU isn't equipped with weapons. Instead, it helps people overcome immense obstacles peacefully, encouraging new beginnings without violence.\n<br><br>\nMIRU continuously evolves by interacting with people, learning and growing to assist those struggling to survive.\n<br><br>\nIt listens to their problems and offers support.\n<br><br>\nBy helping others, MIRU sets off a “Butterfly Effect”, of dramatic change guiding society toward a brighter future.\n<br><br>\nWhy was MIRU created? What is its purpose? Can it save the Earth and humanity from a dystopian future?\n<br><br>\n<i>\"The future is in our hands.\"</i>\n<br><br>\n(Official MIRU Site, edited)<br><br>\n<i>Contains:<br>\n1) Episode 079:「スターダストメモリー」 \"Stardust Memory\"<br>\n2) Episode 101: 「The King of the Forest」<br>\n3) Episode 217: 「この世の波風さわぎ」\"Londonderry Air\"<br>\n4) Episode 630: 「Re: MIRU」<br>\n5) Episode 926: 「待ってて、今行く」 \"Wait, I'll Be There\"</i>"
     },
     {
-      "id": "tt34853325",
-      "type": "series",
-      "name": "Princess-Session Orchestra",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178052-pzEAGk697GMM.png",
-      "description": "Genres: Mahou Shoujo, Music\nTags:Henshin/Magic/Female Protagonist\nThe anime takes place in Alicepia, which is a mysterious country that has existed since ancient times. The inhabitants of Alicepia, the Alicepians, are a fun-loving people, but one day mysterious monsters called Jamaock appeared to threaten the peace of Alicepia. The story follows a trio of \"princesses\" who never forget the song in their hearts, even when facing such danger and step up to save the day with the power of music. <br><br>\n\n(Source: Anime News Network, Crunchyroll News, edited)"
-    },
-    {
       "id": "tt13835440",
       "type": "series",
       "name": "Catch Me at the Ballpark!",
@@ -330,10 +323,17 @@
       "description": "Genres: Comedy, Fantasy, Romance\nTags:Male Harem/Female Protagonist/Shoujo\nSophia, a timid daughter of a count, just wanted a peaceful life, but the Gorilla God had other plans. Blessed with unmatched strength, she’s thrust into the Royal Knight Order, turning her quiet days into chaos. Now, she must juggle school, the knight life, and her overwhelming power. Who knew gorilla strength could be so complicated?<br><br>\n\n(Source: Crunchyroll)"
     },
     {
+      "id": "tt34853325",
+      "type": "series",
+      "name": "Princess-Session Orchestra",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx178052-pzEAGk697GMM.png",
+      "description": "Genres: Mahou Shoujo, Music\nTags:Henshin/Magic/Female Protagonist\nThe anime takes place in Alicepia, which is a mysterious country that has existed since ancient times. The inhabitants of Alicepia, the Alicepians, are a fun-loving people, but one day mysterious monsters called Jamaock appeared to threaten the peace of Alicepia. The story follows a trio of \"princesses\" who never forget the song in their hearts, even when facing such danger and step up to save the day with the power of music. <br><br>\n\n(Source: Anime News Network, Crunchyroll News, edited)"
+    },
+    {
       "id": "tt36041841",
       "type": "series",
       "name": "Food for the Soul",
-      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185939-sab8ngzZO1ir.jpg",
+      "poster": "https://s4.anilist.co/file/anilistcdn/media/anime/cover/large/bx185939-8ubOPQA3DyH8.jpg",
       "description": "Genres: Slice of Life\nTags:Cute Girls Doing Cute Things/Female Protagonist/Food/Primarily Female Cast/Iyashikei\nAn original animation about the daily life of five girls who have just become university students.<br><br>\nThey love delicious food, want to have lots of fun with everyone, and try their best to study, so they're enjoying university life to the fullest!<br><br>\n(Source: Official Site, Translated)"
     },
     {
